--- a/.envmgr.yml
+++ b/.envmgr.yml
@@ -8,6 +8,6 @@ name: drupal
 # The configuration of app when it is exposed to the web.
 web:
     # The public directory of the app, relative to its root.
-    document_root: "/docroot"
+    document_root: "/"
     # The front-controller script to send non-static requests to.
     passthru: "/index.php"
